force-app/main/default/objects/Notification__e/fields/Confetti__c.field-meta.xml
<CustomField>
    <fullName>Confetti__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, LWC will fire confetti in addition to the toast.</description>
    <label>Confetti?</label>
    <type>Checkbox</type>
</CustomField>