force-app/main/default/objects/Notification__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>A string representing the body of the message. It can contain placeholders in the form of {0} ... {N}. The placeholders are replaced with the links on messageData.</description>
    <label>Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>