force-app/main/default/objects/Notification__e/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <description>Determines how persistent the toast is. Valid values are: dismissable (default), remains visible until you click the close button or 3 seconds has elapsed, whichever comes first; pester, remains visible for 3 seconds and disappears automatically. No close button is provided; sticky, remains visible until you click the close button.</description>
    <label>Mode</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>