force-app/main/default/objects/Notification__e/fields/RecipientId__c.field-meta.xml
<CustomField>
    <fullName>RecipientId__c</fullName>
    <description>Id of the user who will be the event&apos;s recipient. If left blank, is considered a global notification and will alert everyone.</description>
    <label>RecipientId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>