force-app/main/default/objects/Notification__e/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>Does not do anything by itself and does not need to be set, unless you want to use this event for more than sending a simple notification.</description>
    <label>RecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>