force-app/main/default/objects/Notification__e/fields/Variant__c.field-meta.xml
<CustomField>
    <fullName>Variant__c</fullName>
    <description>Changes the appearance of the notice. Toasts inherit styling from toasts in the Lightning Design System. Valid values are: info (default), success, warning, and error</description>
    <label>Variant</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>